language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_return_type.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    foo():  CupC<R> {
        abort 0
    }
}
